@@ -81,7 +81,7 @@ let args2 = [|
 let error s = Printf.printf "error (%s)\n" s;;
 let check r v msg = if !r <> v then error msg;;
 
-let test argv =
+let test spec argv =
   current := 0;
   r_set := false;
   r_clear := true;
@@ -89,7 +89,7 @@ let test argv =
   r_int := 0;
   r_float := 0.0;
   accum := [];
-  Arg.parse_argv ~current argv spec f_anon "usage";
+  Arg.parse_and_expand_argv_dynamic current argv (ref spec) f_anon "usage";
   let result = List.rev !accum in
   let reference = [
       "anon(anon1)";
@@ -119,5 +119,43 @@ let test argv =
   check r_float 2.72 "Set_float";
 ;;
 
-test args1;;
-test args2;;
+let test_arg args = test spec (ref args);;
+
+test_arg args1;;
+test_arg args2;;
+
+let f_expand r msg arg s =
+  if s <> r then error msg;
+  arg;
+;;
+
+let expand1,args1,expected1 =
+  let l = Array.length args1  - 1 in
+  let args = Array.sub args1 1 l in
+  let args1 =  [|"prog";"-expand";"expand_arg1"|] in
+  Arg.["-expand", Expand (f_expand "expand_arg1" "Expand" args), "Expand (1)";],
+  args1,
+  Array.append  args1 args
+;;
+
+let expand2,args2,expected2 =
+  let l = Array.length args2  - 1 in
+  let args = Array.sub args2 1 l in
+  let args2 = [|"prog";"-expand";"expand_arg2"|] in
+  Arg.["-expand", Expand (f_expand "expand_arg2" "Expand" args), "Expand (1)";],
+  args2,
+  Array.append args2 args
+;;
+
+let test_expand spec argv reference =
+  let result = ref argv in
+  test spec result;
+  let f x y =
+    if x <> y then
+      Printf.printf "%20s %c %-20s\n%!" x (if x = y then '=' else '#') y
+  in
+  Array.iter2 f !result reference;
+;;
+
+test_expand (expand1@spec) args1 expected1;;
+test_expand (expand2@spec) args2 expected2;;
